--- a/game/src/main/res/layout/activity_menu.xml
+++ b/game/src/main/res/layout/activity_menu.xml
@@ -1,20 +1,39 @@
-<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/relLayout1"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:layout_gravity="center">
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/textView" />
+        android:layout_centerHorizontal="true">
 
-    <Button
+        <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2" />
+
+        <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="QuickPlay"
-        android:id="@+id/button"
-        android:onClick="runGame" />
-</LinearLayout>
+        android:id="@+id/QuickPlayButton"
+        android:onClick="runGame"
+            />
+
+        <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Multiplayer"
+        android:id="@+id/MultiplayerButton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+
+            />
+    </LinearLayout>
+
+</RelativeLayout>
