--- a/game/src/main/res/layout/activity_menu.xml
+++ b/game/src/main/res/layout/activity_menu.xml
@@ -6,6 +6,7 @@ android:layout_height="wrap_content"
 android:layout_gravity="center">
 
     <LinearLayout
+        android:background="@drawable/Start"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
