--- a/game/src/main/res/layout/activity_menu.xml
+++ b/game/src/main/res/layout/activity_menu.xml
@@ -15,7 +15,8 @@ android:layout_gravity="center">
         <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView2" />
+        android:id="@+id/imageView2"
+            android:background="@drawable/start" />
 
         <Button
         android:layout_width="wrap_content"
