--- a/game/src/main/res/layout/activity_menu.xml
+++ b/game/src/main/res/layout/activity_menu.xml
@@ -1,39 +1,40 @@
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/relLayout1"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_gravity="center">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/relLayout1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="@drawable/title">
 
     <LinearLayout
-        android:background="@drawable/start"
+        android:background="@drawable/title"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true">
 
         <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-            android:background="@drawable/start" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"
+            android:background="@drawable/title"/>
 
         <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="QuickPlay"
-        android:id="@+id/QuickPlayButton"
-        android:onClick="runGame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="QuickPlay"
+            android:id="@+id/QuickPlayButton"
+            android:onClick="runGame"
             />
 
         <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Multiplayer"
-        android:id="@+id/MultiplayerButton"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Multiplayer"
+            android:id="@+id/MultiplayerButton"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
 
             />
     </LinearLayout>
