--- a/game/src/main/res/layout/activity_menu.xml
+++ b/game/src/main/res/layout/activity_menu.xml
@@ -7,17 +7,10 @@
     android:background="@drawable/title">
 
     <LinearLayout
-        android:background="@drawable/title"
-        android:orientation="vertical"
+        android:background="@drawable/start"
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView2"
-            android:background="@drawable/title"/>
+        android:layout_height="wrap_content">
 
         <Button
             android:layout_width="wrap_content"
@@ -27,16 +20,7 @@
             android:onClick="runGame"
             />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Multiplayer"
-            android:id="@+id/MultiplayerButton"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
 
-            />
     </LinearLayout>
 
 </RelativeLayout>
