--- a/game/src/main/res/layout/activity_menu.xml
+++ b/game/src/main/res/layout/activity_menu.xml
@@ -7,18 +7,25 @@
     android:background="@drawable/title">
 
     <LinearLayout
-        android:background="@drawable/start"
-        android:orientation="horizontal"
+
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentStart="false"
+        android:layout_marginTop="87dp"
+        android:layout_alignParentEnd="false"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_centerInParent="true">
+
+
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="QuickPlay"
+            android:layout_width="123dp"
+            android:layout_height="30.6dp"
             android:id="@+id/QuickPlayButton"
-            android:onClick="runGame"
-            />
+            android:background="@drawable/start"
+            android:onClick="runGame" />
 
 
     </LinearLayout>
